# mythical-python

./: .gitignore  README.md  create-github-repo.zsh  plan.md  pyproject.toml  spec.md  todo.md
creatures/: __init__.py
creatures/direwolf/: __init__.py  direwolf.py  test_direwolf.py
creatures/dragon/: __init__.py  dragon.py  test_dragon.py
creatures/fairy/: __init__.py  fairy.py  test_fairy.py
creatures/hobbit/: __init__.py  hobbit.py  test_hobbit.py
creatures/medusa/: __init__.py  medusa.py  test_medusa.py
creatures/ogre/: __init__.py  ogre.py  test_ogre.py
creatures/pirate/: __init__.py  pirate.py  test_pirate.py
creatures/sphinx/: __init__.py  sphinx.py  test_sphinx.py
creatures/unicorn/: __init__.py  test_unicorn.py  unicorn.py
creatures/vampire/: __init__.py  test_vampire.py  vampire.py
creatures/wizard/: __init__.py  test_wizard.py  wizard.py
tests/: __init__.py
